long overdue JVM tuning